--- a/client/contacts.html
+++ b/client/contacts.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <head>
 	<title>COP 4331 Small Project Contacts</title>
-	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="code.js"></script>
     <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	
-	<script type="text/javascript">
-	document.addEventListener('DOMContentLoaded', function() 
-	{
-		readCookie();
-	}, false);
-	</script>
+		<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function() 
+		{
+			readCookie();
+		}, false);
+		</script>
 	
 	
 </head>
 <body>
-
+<main>
 <!--Title-->
 <h1 id="title">Contacts</h1>
+<div class="card">
 
-
-<div id="accessUIDiv">
-
-	<!--Search for contact-->
-	<br />
-	<input type="text" id="searchText" placeholder="Contact To Search For"/>
-	<button type="button" id="searchContactButton" class="buttons" onclick="searchColor();"> Search Contact </button><br />
-	<span id="contactSearchResult"></span>
-	<p id="contactList">
-	</p><br /><br />
-
-	<!--Add new contact-->
-	<button type ="button" id ="searchContactButton" class="buttons" onclick="openAdd()">Add Contact</button>
-	<div id= "AddDiv" class="container">
-    <input type="addContactS" id="addFirst" placeholder="First Name">
-    <input type="addContact" id="addLast" placeholder="Last Name">
-	<input type="addContact" id="addPhone" placeholder="Phone">
-	<input type="addContact" id="addEmail" placeholder="Email">
-	<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Submit </button><br />
-	</div>
-	<span id="contactAddResult"></span>
-
-	<!--Logout-->
-	<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
-
+		<!--Search for contact-->
+		<section class = "search">
+			<h3>Look Up Contact</h3>
+			<input type="text" id="searchText" class= "card-input" placeholder="Contact To Search For..."/>
+			<button type="button" class="search-button" onclick="searchContact();"> Search</button>
+			<span id="contactSearchResult"></span>
+			<p id="contactList">
+			</p>
+		</section>
+		
+		<!-- Add new contact -->
+		<section class = "add">
+			<h3>Create New Contact</h3>
+			<input type="text" id="addFirst" class= "card-input2" placeholder="First Name">
+			<input type="text" id="addLast" class= "card-input2" placeholder="Last Name">
+			<input type="text" id="addPhone" class= "card-input2" placeholder="Phone">
+			<input type="text" id="addEmail" class= "card-input2" placeholder="Email">
+			<button type="button" 
+				class="search-button" 
+				onclick="addContact();"> Submit
+			</button>
+			<span id="contactAddResult"></span>
+		</section>
+	
+			
+		<!--Logout-->
+		<a href="index.html" class="logout-button" onclick="doLogout();"> Log Out</a>
 </div>
+</main>
 </body>
 </html>
 
