--- a/client/contacts.html
+++ b/client/contacts.html
@@ -2,7 +2,7 @@
 <head>
 	<title>COP 4331 Small Project Contacts</title>
 	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/style.css" rel="stylesheet">	
+    <link href="style.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 		<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function() 
