Search Display Update
Slight adjust to firstname/lastname API to return the full contact

--- a/client/contacts.html
+++ b/client/contacts.html
@@ -24,7 +24,25 @@
 			<input type="text" id="searchText" class= "card-input3" placeholder="Contact To Search For..."/>
 			<button type="button" class="search-button" onclick="searchContact();"> Search</button>
 			<span id="contactSearchResult"></span>
-			<p id="contactList">
+			<p id="contactList" class="contactList">
+				<div class="card-columns">
+					<section>
+						First:
+						<span id="contactSearchResult-First"></span>
+					</section>
+					<section>
+						Last:
+						<span id="contactSearchResult-Last"></span>
+					</section>
+					<section>
+						Phone:
+						<span id="contactSearchResult-Phone"></span>
+					</section>
+					<section>
+						Email:
+						<span id="contactSearchResult-Email"></span>
+					</section>
+				</div>
 			</p>
 		</section>
 		
