--- a/client/contacts.html
+++ b/client/contacts.html
@@ -5,12 +5,12 @@
     <link href="style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 		<script type="text/javascript">
-		document.addEventListener('DOMContentLoaded', function() 
-		{
-			readCookie();
-		}, false);
+			document.addEventListener('DOMContentLoaded', function() 
+			{
+				readCookie();
+			}, false);
 		</script>
-	
+
 </head>
 <body>
 <main>
@@ -19,31 +19,41 @@
 <div class="card">
 	<div class="card-columns">
 		<!--Search for contact-->
-		<section class = "search">
+		<section class="search">
 			<h3>Look Up Contact</h3>
-			<input type="text" id="searchText" class= "card-input3" placeholder="Contact To Search For..."/>
-			<button type="button" class="search-button" onclick="searchContact();"> Search</button>
+
+			<input type="text" id="searchText" class="card-input3"
+				placeholder="Contact To Search For..." />
+
+			<button type="button" class="search-button" onclick="searchContact();">
+				Search
+			</button>
+
 			<span id="contactSearchResult"></span>
-			<p id="contactList" class="contactList">
-				<div class="card-columns">
-					<section>
-						First:
+
+			<div id="contactList" class="contactList">
+				<div class="contact-columns">
+					<div class="column">
+						<strong>First</strong>
 						<span id="contactSearchResult-First"></span>
-					</section>
-					<section>
-						Last:
+					</div>
+
+					<div class="column">
+						<strong>Last</strong>
 						<span id="contactSearchResult-Last"></span>
-					</section>
-					<section>
-						Phone:
+					</div>
+
+					<div class="column">
+						<strong>Phone</strong>
 						<span id="contactSearchResult-Phone"></span>
-					</section>
-					<section>
-						Email:
-						<span id="contactSearchResult-Email"></span>
-					</section>
+					</div>
+
+					<div class="column">
+					<strong>Email</strong>
+					<span id="contactSearchResult-Email"></span>
+					</div>
 				</div>
-			</p>
+			</div>
 		</section>
 		
 		<!-- Add new contact -->
