--- a/client/contacts.html
+++ b/client/contacts.html
@@ -32,28 +32,22 @@
 			<span id="contactSearchResult"></span>
 
 			<div id="contactList" class="contactList">
-				<div class="contact-columns">
-					<div class="column">
-						<strong>First</strong>
-						<span id="contactSearchResult-First"></span>
-					</div>
+    			<div class="contact-columns">
 
-					<div class="column">
-						<strong>Last</strong>
-						<span id="contactSearchResult-Last"></span>
-					</div>
+					<!-- Headers -->
+					<div class="grid-header">First</div>
+					<div class="grid-header">Last</div>
+					<div class="grid-header">Phone</div>
+					<div class="grid-header">Email</div>
 
-					<div class="column">
-						<strong>Phone</strong>
-						<span id="contactSearchResult-Phone"></span>
-					</div>
+					<!-- Results row -->
+					<div id="contactSearchResult-First">—</div>
+					<div id="contactSearchResult-Last">—</div>
+					<div id="contactSearchResult-Phone">—</div>
+					<div id="contactSearchResult-Email">—</div>
 
-					<div class="column">
-					<strong>Email</strong>
-					<span id="contactSearchResult-Email"></span>
-					</div>
-				</div>
-			</div>
+    			</div>
+			div>
 		</section>
 		
 		<!-- Add new contact -->
