--- a/client/contacts.html
+++ b/client/contacts.html
@@ -47,7 +47,7 @@
 					<div id="contactSearchResult-Email">—</div>
 
     			</div>
-			div>
+			<div>
 		</section>
 		
 		<!-- Add new contact -->
