--- a/client/contacts.html
+++ b/client/contacts.html
@@ -41,10 +41,10 @@
 					<div class="grid-header">Email</div>
 
 					<!-- Results row -->
-					<div id="contactSearchResult-First">—</div>
-					<div id="contactSearchResult-Last">—</div>
-					<div id="contactSearchResult-Phone">—</div>
-					<div id="contactSearchResult-Email">—</div>
+					<div id="contactSearchResult-First">-</div>
+					<div id="contactSearchResult-Last">-</div>
+					<div id="contactSearchResult-Phone">-</div>
+					<div id="contactSearchResult-Email">-</div>
 
     			</div>
 			<div>
