--- a/client/contacts.html
+++ b/client/contacts.html
@@ -45,8 +45,14 @@
 					<div class="grid-header">Phone</div>
 					<div class="grid-header">Email</div>
 
-					<!-- Results row -->
-					<div id="contactResults"></div>
+					<div class="contact-columns" id="contactResults">
+
+    					<div class="grid-header">First</div>
+    					<div class="grid-header">Last</div>
+   						<div class="grid-header">Phone</div>
+    					<div class="grid-header">Email</div>
+
+					</div>
 
     			</div>
 			<div>
