--- a/client/contacts.html
+++ b/client/contacts.html
@@ -16,6 +16,7 @@
 				getContacts();
 
 			}, false);
+			
 		</script>
 
 </head>
@@ -38,24 +39,17 @@
 
 			<div id="contactList" class="contactList">
     			<div class="contact-columns">
-
-					<!-- Headers -->
-					<div class="grid-header">First</div>
-					<div class="grid-header">Last</div>
-					<div class="grid-header">Phone</div>
-					<div class="grid-header">Email</div>
-
-					<div class="contact-columns" id="contactResults">
-
-    					<div class="grid-header">First</div>
-    					<div class="grid-header">Last</div>
-   						<div class="grid-header">Phone</div>
-    					<div class="grid-header">Email</div>
-
-					</div>
-
-    			</div>
-			<div>
+    				<div class="contact-grid" id="contactResults">
+						<!-- Headers -->
+						<div class="grid-header">First</div>
+						<div class="grid-header">Last</div>
+						<div class="grid-header">Phone</div>
+						<div class="grid-header">Email</div>
+						<div class="grid-header"></div>
+						<div class="grid-header"></div>
+        
+    				</div>
+				</div>
 		</section>
 		
 		<!-- Add new contact -->
