--- a/client/settings.html
+++ b/client/settings.html
@@ -65,7 +65,11 @@
 
     <section class="change-theme-color">
       <h2 id="theme-header">Not feeling the colors?</h2>
-      <button onclick="toggleTheme('root')" id="cycle-theme">Click Here</button>
+      <button type="button" 
+					class="search-button" 
+					onclick="toggleTheme('root')"
+          id="cycle-theme">Click Here
+				</button><br>
     </section>
   </div>
 
