Add image to settings title for font size adjustment

--- a/client/settings.html
+++ b/client/settings.html
@@ -27,7 +27,13 @@
       </div>
   </div>
 
-  <h1 id="title">Settings</h1>
+  <h1 id="title">Settings
+  		<img
+				id="increase-font"
+				src="images/settings-gear.gif"
+				alt="increase image size"
+		>
+  </h1>
 
   <div class="card">
     <section class="change-font-size">
