--- a/client/settings.html
+++ b/client/settings.html
@@ -31,7 +31,7 @@
   		<img
 				id="increase-font"
 				src="images/settings-gear.gif"
-				alt="increase image size"
+				alt="Increase Font size"
 		>
   </h1>
 
