Update settings gear image source

--- a/client/settings.html
+++ b/client/settings.html
@@ -30,7 +30,7 @@
   <h1 id="title">Settings
   		<img
 				id="increase-font"
-				src="images/settings-gear.gif"
+				src="images/Gear.gif"
 				alt="Increase Font size"
 				style="width: 10%;"
 		>
