Fix alt attribute for increase font image

--- a/client/settings.html
+++ b/client/settings.html
@@ -31,7 +31,7 @@
   		<img
 				id="increase-font"
 				src="images/Gear.gif"
-				alt="Increase Font size"
+				alt="Gear.gif"
 				style="width: 10%;"
 		>
   </h1>
