Fix image source case in settings.html

--- a/client/settings.html
+++ b/client/settings.html
@@ -30,7 +30,7 @@
   <h1 id="title">Settings
   		<img
 				id="increase-font"
-				src="images/Gear.gif"
+				src="images/gear.gif"
 				alt="Gear.gif"
 				style="width: 10%;"
 		>
