Update title and add background image style
Changed the title from 'Small Project – COP 4331C Login' to 'Settings' and added a background image style.

--- a/client/settings.html
+++ b/client/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Small Project – COP 4331C Login</title>
+  <title>Settings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" src="js/code.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -31,7 +31,18 @@
   </h1>
 
   <div class="card">
+
+	  <style>
+		body {
+  			background-image: url('img_girl.jpg');
+  			background-repeat: no-repeat;
+  			background-attachment: fixed;
+  			background-size: cover;
+		}
+	</style>
     <section class="change-font-size">
+
+		
 
       <h2 id="size-header">Change Font Size</h2>
 
