Change background image to sunset beach

--- a/client/settings.html
+++ b/client/settings.html
@@ -34,7 +34,7 @@
 
 	  <style>
 		body {
-  			background-image: url('img_girl.jpg');
+  			background-image: "images/sunset-beach.jpg";
   			background-repeat: no-repeat;
   			background-attachment: fixed;
   			background-size: cover;
