--- a/client/settings.html
+++ b/client/settings.html
@@ -11,6 +11,7 @@
 <body>
 <main>
 
+
   <div class="navbar">
       <div class="pages">
         <div class="pages">
@@ -32,14 +33,6 @@
 
   <div class="card">
 
-	  <style>
-		body {
-  			background-image: "images/sunset-beach.jpg";
-  			background-repeat: no-repeat;
-  			background-attachment: fixed;
-  			background-size: cover;
-		}
-	</style>
     <section class="change-font-size">
 
 		
@@ -69,7 +62,7 @@
           >
         </button>
 
-        <p id="sample-text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+        <p id="sample-text"> The Contact Manager is a website that will contain all the contacts that will be added to a user's list. It will store information for the user. 
         </p>
       </div>
 
