--- a/client/contacts.html
+++ b/client/contacts.html
@@ -8,13 +8,8 @@
 		<script type="text/javascript">
 			document.addEventListener('DOMContentLoaded', function() 
 			{
-				readCookie();
-
-			}, false);
-
-			document.addEventListener('DOMContentLoaded', function() 
-			{
-				getContacts();
+				//readCookie();
+				//getContacts();
 
 			}, false);
 			
