--- a/client/contacts.html
+++ b/client/contacts.html
@@ -8,8 +8,8 @@
 		<script type="text/javascript">
 			document.addEventListener('DOMContentLoaded', function() 
 			{
-				//readCookie();
-				//getContacts();
+				readCookie();
+				getContacts();
 
 			}, false);
 			
