Email and Phone Requirements while editing

--- a/client/contacts.html
+++ b/client/contacts.html
@@ -90,6 +90,7 @@
 			<input type="text" id="editLast" placeholder="Last Name">
 			<input type="text" id="editPhone" placeholder="Phone">
 			<input type="text" id="editEmail" placeholder="Email">
+			<span id="editResult"></span>
 
 			<button onclick="saveEdit()">Save Changes</button>
 			<button onclick="closeModal()">Cancel</button>
