Wipe Edit results/alignment in modal

--- a/client/contacts.html
+++ b/client/contacts.html
@@ -86,11 +86,11 @@
 			<span class="close">&times;</span>
 			<h3>Edit Contact</h3>
 
-			<input type="text" id="editFirst" placeholder="First Name">
-			<input type="text" id="editLast" placeholder="Last Name">
-			<input type="text" id="editPhone" placeholder="Phone">
-			<input type="text" id="editEmail" placeholder="Email">
-			<span id="editResult"></span>
+			First: <input type="text" id="editFirst" placeholder="First Name">
+			Last:<input type="text" id="editLast" placeholder="Last Name">
+			Phone:<input type="text" id="editPhone" placeholder="Phone">
+			Email:<input type="text" id="editEmail" placeholder="Email">
+			<span id="editResult"></span><br>
 
 			<button onclick="saveEdit()">Save Changes</button>
 			<button onclick="closeModal()">Cancel</button>
