--- a/client/contacts.html
+++ b/client/contacts.html
@@ -83,7 +83,7 @@
 	<!-- Edit Contact Modal -->
 	<div id="editModal" class="modal">
 		<div class="modal-content">
-			<span class="close">&times;</span>
+			<span class="close" onclick="closeModal()">&times; </span>
 			<h3>Edit Contact</h3>
 
 			First: <input type="text" id="editFirst" placeholder="First Name">
