--- a/client/contacts.html
+++ b/client/contacts.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript">
 			document.addEventListener('DOMContentLoaded', function() 
 			{
-				readCookie();
+				//readCookie();
 				getContacts();
 
 			}, false);
@@ -53,7 +53,7 @@
 							<div class="grid-header">Last</div>
 							<div class="grid-header">Phone</div>
 							<div class="grid-header">Email</div>
-							<div class="grid-header"></div>
+							<div class="grid-header-edit"></div>
 							<div class="grid-header"></div>
 						</div>
 					</div>
