Testing INDEX.HTML
TRAVIS, DONT WORRY, I ONLY EDITED LINES 27-28

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,8 @@
         </div>
     </div>
 
-    <h1 id="title">Contact Manager</h1>
+    <h1 id="title">Welcome to Contact Cruise</h1>
+    <h2 >Get started and access your account below!</h2>
 
     <div class="card">
         <div class="card-columns">
